# 251223

./: AGENTS.md  Deep Mathematical Exploration_ Sheaf Cohomology for Building Massing.md  README.md  band_layout.py  fix_corners.py  main.py  pyproject.toml
.agent/rules/: python-coding-principles.md
.github/workflows/: deploy.yml
docs/: firebase-deploy-docs.md
examples/: output_schema.json  p1_floors.html  p1_output.json  render_from_json.py  run_solver.py  run_with_viz.py  test_rotation.py
gloq-massing-v2/: .firebaserc  firebase.json  index.html  package-lock.json  package.json
gloq-massing-v2/.firebase/: hosting.ZGlzdA.cache
gloq-massing-v2/src/: App.css  App.tsx  index.css
gloq-massing-v2/src/components/: BuildModeToggle.tsx  ConstructionTypeSelector.tsx  ExcelUploader.tsx  MassingViewer.tsx  MetricsSidebar.tsx
gloq-massing-v2/src/hooks/: useExcelData.ts
gloq-massing-v2/src/types/: building.ts
gloq-massing-v2/src/utils/: generateMassing.ts  generateMassingV3.ts  geometry.ts
src/gloq_massing/: AGENTS.md  __init__.py
tasks/phase2/: phase2-implementation-and-testing.md  plan-phase2-massing-enhancements.md
web-viewer/: AGENTS.md  README.md  READSHAK.md  firebase.json  index.html  package-lock.json  package.json  tsconfig.node.json
web-viewer/.firebase/: hosting.ZGlzdA.cache
web-viewer/docs/: next-steps-research.md
web-viewer/functions/: index.js  package-lock.json  package.json
web-viewer/scripts/: architect-agent.ts  architect-refine.ts  generateOutputs.cjs  regenerate-outputs.ts
web-viewer/src/: App.css  App.tsx
(+94 files in other folders)
